--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -330,15 +330,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "7f488106",
       "metadata": {
         "id": "7f488106",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "8a4a4345-5ad9-43ac-daca-6f6f1154a910"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-611c0d7ee290>\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mVALIDATION_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/tmp/cats-v-dogs/validation/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mTRAINING_CATS_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAINING_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cats/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mVALIDATION_CATS_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVALIDATION_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cats/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -434,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "24714cb2",
       "metadata": {
         "cellView": "code",
@@ -445,8 +462,6 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: train_val_generators\n",
         "def train_val_generators(TRAINING_DIR, VALIDATION_DIR):\n",
         "  \"\"\"\n",
@@ -462,21 +477,21 @@
         "  ### START CODE HERE\n",
         "\n",
         "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  train_datagen = None\n",
+        "  train_datagen = ImageDataGenerator( rescale = 1.0/255. )\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
-        "  train_generator = train_datagen.flow_from_directory(directory=None,\n",
-        "                                                      batch_size=None,\n",
-        "                                                      class_mode=None,\n",
-        "                                                      target_size=(None, None))\n",
+        "  # Pass in the appropiate arguments to the flow_from_directory method\n",
+        "  train_generator = train_datagen.flow_from_directory(directory=TRAINING_DIR,\n",
+        "                                                      batch_size=50,\n",
+        "                                                      class_mode='binary',\n",
+        "                                                      target_size=(150, 150))\n",
         "\n",
         "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  validation_datagen = None\n",
+        "  validation_datagen = ImageDataGenerator( rescale = 1.0/255. )\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
-        "  validation_generator = validation_datagen.flow_from_directory(directory=None,\n",
-        "                                                                batch_size=None,\n",
-        "                                                                class_mode=None,\n",
+        "  # Pass in the appropiate arguments to the flow_from_directory method\n",
+        "  validation_generator = validation_datagen.flow_from_directory(directory=VALIDATION_DIR,\n",
+        "                                                                batch_size=50,\n",
+        "                                                                class_mode='binary',\n",
         "                                                                target_size=(150, 150))\n",
         "  ### END CODE HERE\n",
         "  return train_generator, validation_generator"
