--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "1e6c840a",
       "metadata": {
         "cellView": "code",
@@ -167,9 +167,11 @@
         "# grader-required-cell\n",
         "\n",
         "# Define root directory\n",
+        "import os\n",
+        "\n",
         "root_dir = '/tmp/cats-v-dogs'\n",
         "\n",
-        "# Empty directory to prevent FileExistsError is the function is run several times\n",
+        "# Empty directory to prevent FileExistsError if the function is run several times\n",
         "if os.path.exists(root_dir):\n",
         "  shutil.rmtree(root_dir)\n",
         "\n",
@@ -189,6 +191,20 @@
         "  # HINT:\n",
         "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
         "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
+        "  os.makedirs(root_path)\n",
+        "  train_dir = os.path.join(root_path, 'training')\n",
+        "  val_dir = os.path.join(root_path, 'validation')\n",
+        "\n",
+        "  # Directory with training and validation cat/dog pictures\n",
+        "  train_cats_dir = os.path.join(train_dir, 'cats')\n",
+        "  train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
+        "  val_cats_dir = os.path.join(val_dir, 'cats')\n",
+        "  val_dogs_dir = os.path.join(val_dir, 'dogs')\n",
+        "\n",
+        "  os.makedirs(train_cats_dir)\n",
+        "  os.makedirs(train_dogs_dir)\n",
+        "  os.makedirs(val_cats_dir)\n",
+        "  os.makedirs(val_dogs_dir)\n",
         "\n",
         "  pass\n",
         "\n",
@@ -278,16 +294,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "e1c123a7",
       "metadata": {
         "cellView": "code",
         "id": "e1c123a7",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        },
+        "outputId": "5b90b0ba-bf5b-4d9d-a7c5-6eebbcaa7045"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-82184fc33dbb>\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    train_dir = os.path.join(root_path, 'training')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -548,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "2141d195",
       "metadata": {
         "cellView": "code",
@@ -570,8 +600,23 @@
         "  ### START CODE HERE\n",
         "\n",
         "  model = tf.keras.models.Sequential([\n",
-        "      None,\n",
+        "       tf.keras.layers.Conv2D(16, (3,3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "      tf.keras.layers.Conv2D(32, (3,3), activation='relu'),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "      tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "      tf.keras.layers.Conv2D(128, (3,3), activation='relu'),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "      # Flatten the results to feed into a DNN\n",
+        "      tf.keras.layers.Flatten(),\n",
+        "      # 512 neuron hidden layer\n",
+        "      tf.keras.layers.Dense(512, activation='relu'),\n",
+        "      # Only 1 output neuron. It will contain a value from 0-1 where 0 for 1 class ('cats') and 1 for the other ('dogs')\n",
+        "      tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "  ])\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "  model.compile(optimizer=None,\n",
