--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -153,16 +153,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "id": "1e6c840a",
       "metadata": {
         "cellView": "code",
         "id": "1e6c840a",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "6f312227-29a8-497f-ba8c-fcf46cc3178c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-9fb9cb4c63fd>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Empty directory to prevent FileExistsError if the function is run several times\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# GRADED FUNCTION: create_train_val_dirs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'shutil' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -220,15 +237,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "08f735fe",
       "metadata": {
         "id": "08f735fe",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d6283f61-6266-4598-b9ca-2ba90bbefbc8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/tmp/cats-v-dogs/training\n",
+            "/tmp/cats-v-dogs/validation\n",
+            "/tmp/cats-v-dogs/training/dogs\n",
+            "/tmp/cats-v-dogs/training/cats\n",
+            "/tmp/cats-v-dogs/validation/dogs\n",
+            "/tmp/cats-v-dogs/validation/cats\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -294,52 +328,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 27,
       "id": "e1c123a7",
       "metadata": {
         "cellView": "code",
         "id": "e1c123a7",
         "tags": [
           "graded"
-        ],
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        },
-        "outputId": "5b90b0ba-bf5b-4d9d-a7c5-6eebbcaa7045"
+        ]
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-82184fc33dbb>\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    train_dir = os.path.join(root_path, 'training')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# grader-required-cell\n",
+        "import os\n",
+        "import shutil\n",
         "\n",
-        "# GRADED FUNCTION: split_data\n",
-        "def split_data(SOURCE_DIR, TRAINING_DIR, VALIDATION_DIR, SPLIT_SIZE):\n",
+        "# Define root directory\n",
+        "root_dir = '/tmp/cats-v-dogs'\n",
+        "train_dir = os.path.join(root_dir, 'training')  # Cambiar 'root_path' a 'root_dir'\n",
+        "\n",
+        "# Empty directory to prevent FileExistsError if the function is run several times\n",
+        "if os.path.exists(root_dir):\n",
+        "  shutil.rmtree(root_dir)\n",
+        "\n",
+        "# GRADED FUNCTION: create_train_val_dirs\n",
+        "def create_train_val_dirs(root_path):\n",
         "  \"\"\"\n",
-        "  Splits the data into train and test sets\n",
+        "  Creates directories for the train and test sets\n",
         "\n",
         "  Args:\n",
-        "    SOURCE_DIR (string): directory path containing the images\n",
-        "    TRAINING_DIR (string): directory path to be used for training\n",
-        "    VALIDATION_DIR (string): directory path to be used for validation\n",
-        "    SPLIT_SIZE (float): proportion of the dataset to be used for training\n",
+        "    root_path (string) - the base directory path to create subdirectories from\n",
         "\n",
         "  Returns:\n",
         "    None\n",
         "  \"\"\"\n",
-        "\n",
         "  ### START CODE HERE\n",
-        "os.makedirs(root_path)\n",
-        "  train_dir = os.path.join(root_path, 'training')\n",
-        "  val_dir = os.path.join(root_path, 'validation')\n",
+        "\n",
+        "  # HINT:\n",
+        "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
+        "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
+        "\n",
+        "  train_dir = os.path.join(root_dir, 'training')  # Cambiar 'root_path' a 'root_dir'\n",
+        "  val_dir = os.path.join(root_dir, 'validation')  # Cambiar 'root_path' a 'root_dir'\n",
         "\n",
         "  # Directory with training and valuation cat/dog pictures\n",
         "  train_cats_dir = os.path.join(train_dir, 'cats')\n",
@@ -352,6 +381,7 @@
         "  os.makedirs(val_cats_dir)\n",
         "  os.makedirs(val_dogs_dir)\n",
         "\n",
+        "  pass\n",
         "\n",
         "  pass\n",
         "\n",
