--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 35,
       "id": "e1c123a7",
       "metadata": {
         "cellView": "code",
@@ -339,14 +339,12 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "import shutil\n",
-        "\n",
         "# Define root directory\n",
+        "import os\n",
+        "import shutil  # Agrega esta línea para importar shutil\n",
         "root_dir = '/tmp/cats-v-dogs'\n",
-        "train_dir = os.path.join(root_dir, 'training')  # Cambiar 'root_path' a 'root_dir'\n",
         "\n",
-        "# Empty directory to prevent FileExistsError if the function is run several times\n",
+        "# Empty directory to prevent FileExistsError is the function is run several times\n",
         "if os.path.exists(root_dir):\n",
         "  shutil.rmtree(root_dir)\n",
         "\n",
@@ -367,8 +365,9 @@
         "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
         "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
         "\n",
-        "  train_dir = os.path.join(root_dir, 'training')  # Cambiar 'root_path' a 'root_dir'\n",
-        "  val_dir = os.path.join(root_dir, 'validation')  # Cambiar 'root_path' a 'root_dir'\n",
+        "  os.makedirs(root_path)\n",
+        "  train_dir = os.path.join(root_path, 'training')\n",
+        "  val_dir = os.path.join(root_path, 'validation')\n",
         "\n",
         "  # Directory with training and valuation cat/dog pictures\n",
         "  train_cats_dir = os.path.join(train_dir, 'cats')\n",
@@ -383,7 +382,6 @@
         "\n",
         "  pass\n",
         "\n",
-        "  pass\n",
         "\n",
         "  ### END CODE HERE"
       ]
