--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -153,33 +153,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 39,
       "id": "1e6c840a",
       "metadata": {
         "cellView": "code",
         "id": "1e6c840a",
         "tags": [
           "graded"
-        ],
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 256
-        },
-        "outputId": "6f312227-29a8-497f-ba8c-fcf46cc3178c"
+        ]
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-9fb9cb4c63fd>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Empty directory to prevent FileExistsError if the function is run several times\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# GRADED FUNCTION: create_train_val_dirs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'shutil' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -328,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 41,
       "id": "e1c123a7",
       "metadata": {
         "cellView": "code",
@@ -339,83 +322,60 @@
       },
       "outputs": [],
       "source": [
-        "# Define root directory\n",
-        "import os\n",
-        "import shutil  # Agrega esta línea para importar shutil\n",
-        "root_dir = '/tmp/cats-v-dogs'\n",
-        "\n",
-        "# Empty directory to prevent FileExistsError is the function is run several times\n",
-        "if os.path.exists(root_dir):\n",
-        "  shutil.rmtree(root_dir)\n",
-        "\n",
-        "# GRADED FUNCTION: create_train_val_dirs\n",
-        "def create_train_val_dirs(root_path):\n",
+        "# GRADED FUNCTION: split_data\n",
+        "def split_data(SOURCE_DIR, TRAINING_DIR, VALIDATION_DIR, SPLIT_SIZE):\n",
         "  \"\"\"\n",
-        "  Creates directories for the train and test sets\n",
+        "  Splits the data into train and test sets\n",
         "\n",
         "  Args:\n",
-        "    root_path (string) - the base directory path to create subdirectories from\n",
+        "    SOURCE_DIR (string): directory path containing the images\n",
+        "    TRAINING_DIR (string): directory path to be used for training\n",
+        "    VALIDATION_DIR (string): directory path to be used for validation\n",
+        "    SPLIT_SIZE (float): proportion of the dataset to be used for training\n",
         "\n",
         "  Returns:\n",
         "    None\n",
         "  \"\"\"\n",
+        "\n",
         "  ### START CODE HERE\n",
         "\n",
-        "  # HINT:\n",
-        "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
-        "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
+        "  file_list = []\n",
         "\n",
-        "  os.makedirs(root_path)\n",
-        "  train_dir = os.path.join(root_path, 'training')\n",
-        "  val_dir = os.path.join(root_path, 'validation')\n",
         "\n",
-        "  # Directory with training and valuation cat/dog pictures\n",
-        "  train_cats_dir = os.path.join(train_dir, 'cats')\n",
-        "  train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
-        "  val_cats_dir = os.path.join(val_dir, 'cats')\n",
-        "  val_dogs_dir = os.path.join(val_dir, 'dogs')\n",
+        "  for file in os.listdir(SOURCE_DIR):\n",
+        "    file_path = os.path.join(SOURCE_DIR,file)\n",
+        "    if(os.path.getsize(file_path) == 0):\n",
+        "      print(file + \" is zero length, so ignoring.\")\n",
+        "    else:\n",
+        "      file_list.append(file_path)\n",
         "\n",
-        "  os.makedirs(train_cats_dir)\n",
-        "  os.makedirs(train_dogs_dir)\n",
-        "  os.makedirs(val_cats_dir)\n",
-        "  os.makedirs(val_dogs_dir)\n",
+        "  train_num_items = int(round(len(file_list) * SPLIT_SIZE, 0))\n",
+        "  train_list = random.sample(file_list, train_num_items)\n",
+        "  val_list = list(set(file_list) - set(train_list))\n",
+        "\n",
+        "  for f in train_list:\n",
+        "    copyfile(f,TRAINING_DIR+os.path.basename(f))\n",
+        "  for f in val_list:\n",
+        "    copyfile(f,VALIDATION_DIR+os.path.basename(f))\n",
         "\n",
         "  pass\n",
-        "\n",
         "\n",
         "  ### END CODE HERE"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 59,
       "id": "7f488106",
       "metadata": {
         "id": "7f488106",
         "tags": [
           "graded"
-        ],
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 256
-        },
-        "outputId": "8a4a4345-5ad9-43ac-daca-6f6f1154a910"
+        ]
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-611c0d7ee290>\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mVALIDATION_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/tmp/cats-v-dogs/validation/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mTRAINING_CATS_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAINING_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cats/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mVALIDATION_CATS_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVALIDATION_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cats/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# grader-required-cell\n",
+        "\n",
         "\n",
         "# Test your split_data function\n",
         "\n",
@@ -447,24 +407,7 @@
         "    os.remove(file.path)\n",
         "\n",
         "# Define proportion of images used for training\n",
-        "split_size = .9\n",
-        "\n",
-        "# Run the function\n",
-        "# NOTE: Messages about zero length images should be printed out\n",
-        "split_data(CAT_SOURCE_DIR, TRAINING_CATS_DIR, VALIDATION_CATS_DIR, split_size)\n",
-        "split_data(DOG_SOURCE_DIR, TRAINING_DOGS_DIR, VALIDATION_DOGS_DIR, split_size)\n",
-        "\n",
-        "# Check that the number of images matches the expected output\n",
-        "\n",
-        "# Your function should perform copies rather than moving images so original directories should contain unchanged images\n",
-        "print(f\"\\n\\nOriginal cat's directory has {len(os.listdir(CAT_SOURCE_DIR))} images\")\n",
-        "print(f\"Original dog's directory has {len(os.listdir(DOG_SOURCE_DIR))} images\\n\")\n",
-        "\n",
-        "# Training and validation splits\n",
-        "print(f\"There are {len(os.listdir(TRAINING_CATS_DIR))} images of cats for training\")\n",
-        "print(f\"There are {len(os.listdir(TRAINING_DOGS_DIR))} images of dogs for training\")\n",
-        "print(f\"There are {len(os.listdir(VALIDATION_CATS_DIR))} images of cats for validation\")\n",
-        "print(f\"There are {len(os.listdir(VALIDATION_DOGS_DIR))} images of dogs for validation\")"
+        "split_size = .9\n"
       ]
     },
     {
@@ -670,13 +613,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "87cbef80",
       "metadata": {
         "id": "87cbef80",
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 385
+        },
+        "outputId": "80349fc8-1fdd-4c7a-b5a9-257fa981bc85"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-47-4fd84b04e1cf>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Get the untrained model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Note that this may take some time.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-ce30a4fb9524>\u001b[0m in \u001b[0;36mcreate_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;31m### START CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   model = tf.keras.models.Sequential([ \n\u001b[0m\u001b[1;32m     11\u001b[0m        \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m       \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Get the untrained model\n",
         "model = create_model()\n",
