--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 60,
       "id": "7f488106",
       "metadata": {
         "id": "7f488106",
@@ -375,7 +375,7 @@
       },
       "outputs": [],
       "source": [
-        "\n",
+        "import os\n",
         "\n",
         "# Test your split_data function\n",
         "\n",
